Fixed button spacing issue on about.html
removed html line breaks in about.html, and added margins to elements to correct overlap of elements

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ body {
 
 .about-me__table{
     border-collapse: collapse;
+    margin-bottom: 20px;
 }
 
 th {
@@ -141,6 +142,7 @@ td {
 .balt-skyline {
     width: 100%;
     height: auto;
+    margin-top: 20px;
 }
 
 @keyframes color-change {
